one more alignment fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -139,7 +139,7 @@ body {
   font-family: monospace;
   font-size: 0.875rem;
   width: 100%;
-  height: 2.5rem;
+  height: 2.375rem;
   outline: none;
   background: var(--input-bg);
   color: var(--foreground);
@@ -264,7 +264,7 @@ body {
 
 .color-picker-button {
   width: 2.5rem;
-  height: 2.5rem;
+  height: 2.375rem;
   border-top-left-radius: 0.35rem;
   border-bottom-left-radius: 0.35rem;
   cursor: pointer;
